--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Kubernetes Guardrail Extension",
   "version": "0.1",
   "description": "Validates Kubernetes YAML files in GitHub/GitLab against compliance guardrails.",
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab"],
   "background": {
     "service_worker": "src/background.js"
   },
