--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "background.js",
   "scripts": {
     "lint": "echo 'Add linting later'",
-    "test": "jest --coverage"
+  "test": "jest --coverage"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -14,6 +14,12 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "babel-jest": "^29.5.0",
+    "@babel/core": "^7.23.0",
+  "@babel/preset-env": "^7.23.0",
+  "@babel/plugin-transform-runtime": "^7.23.0",
+    "jest-environment-jsdom": "^29.0.0",
+    "jsdom": "^22.1.0"
   }
 }
